--- a/src/Gui/Screens/CadastroEquipe.form
+++ b/src/Gui/Screens/CadastroEquipe.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="cadastroEquipe" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="593" height="307"/>
+      <xy x="20" y="20" width="593" height="566"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -67,7 +67,9 @@
         <children>
           <component id="32fa4" class="javax.swing.JTable" binding="tabelaResultados">
             <constraints/>
-            <properties/>
+            <properties>
+              <enabled value="false"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
