--- a/src/Gui/Screens/CadastroCampeonatoBrasileiro.form
+++ b/src/Gui/Screens/CadastroCampeonatoBrasileiro.form
@@ -42,14 +42,6 @@
           <editable value="true"/>
         </properties>
       </component>
-      <component id="29e3a" class="javax.swing.JTable" binding="equipesSelecionadas">
-        <constraints>
-          <grid row="2" column="2" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="cbdfe" class="javax.swing.JButton" binding="inserirEquipeNoCampeonatoButton" default-binding="true">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -58,20 +50,33 @@
           <text value="Inserir equipe no campeonato"/>
         </properties>
       </component>
-      <component id="6cd66" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Equipes:"/>
-        </properties>
-      </component>
       <component id="52ab9" class="javax.swing.JButton" binding="cadastrarCampeonatoButton" default-binding="true">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Cadastrar campeonato"/>
+        </properties>
+      </component>
+      <scrollpane id="c0831">
+        <constraints>
+          <grid row="2" column="2" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="29e3a" class="javax.swing.JTable" binding="equipesSelecionadas">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="6cd66" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Equipes:"/>
         </properties>
       </component>
     </children>
